--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ option:hover{
 #result{
     font-size: 2rem;
     background-color: aliceblue;
-    margin: 10px 400px 10px 400px;
+    margin: 10px 30%;
     padding: 5px 5px ;
     color: #232931;
     border-radius: 10px;
